Get home page and services page markup and layout aligned, delete a bunch of stuff we no longer need for layout

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -10,7 +10,11 @@
   }
 
   img {
-    margin: 0.9375rem 0;
+    margin: 0 0 1.5rem 0;
+  }
+
+  .card-image--hang-left-wide,
+  .card-image--hang-right-wide {
     width: 100%;
     max-width: 48.5%;
   }
@@ -19,7 +23,8 @@
 @media (min-width: 500px) {
   .card {
 
-    img {
+    .card-image--hang-left-wide,
+    .card-image--hang-right-wide {
       max-width: 31.333%;
     }
   }
@@ -28,17 +33,32 @@
 @media (min-width: 700px) {
   .card {
 
+    p {
+      width: 74.25%;
+
+      &.paragraph--major {
+        width: 100%;
+      }
+    }
+
     img {
+      margin: 0 0 1.875rem 0;
+    }
+
+    .card-image--hang-left-wide,
+    .card-image--hang-right-wide {
       max-width: 22.75%;
     }
 
-    .card--hang-image-left {
-      margin: 0.375rem 3% 0.9375rem 0;
+    .card-image--hang-left-wide {
+      margin-right: 3%;
+      margin-top: 0.375rem;
       float: left;
     }
 
-    .card--hang-image-right {
-      margin: 0.375rem 0 0.9375rem 3%;
+    .card-image--hang-right-wide {
+      margin-left: 3%;
+      margin-top: 0.375rem;
       float: right;
     }
   }
