--- a/src/styles/defaults/_base.scss
+++ b/src/styles/defaults/_base.scss
@@ -53,8 +53,8 @@ li > ul {
 
 li {
   list-style-type: disc;
-  margin-left: 1.5rem;    // 24px
-  margin-bottom: 0.75rem; // 12px
+  margin-left: 1rem;    // 16px
+  margin-bottom: 0.1875rem; // 3px
 }
 
 .non-text-list {
@@ -129,7 +129,10 @@ section {
   }
 
   .section--header {
-    margin-bottom: 1.5rem;
+
+    .button--default {
+      margin-bottom: 1.5rem;
+    }
 
     &:after { // clearfix
       content: "";
@@ -181,7 +184,7 @@ section {
   li {
     list-style-type: disc;
     margin-left: 1.5rem;    // 24px
-    margin-bottom: 0.75rem; // 12px
+    margin-bottom: 0.375rem; // 6px
   }
 
   .page-heading--title {
@@ -251,6 +254,7 @@ section {
 
       .button--default {
         float: right;
+        margin-bottom: 0;
       }
     }
   }
